# formosaic

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  Readme.md  TODO.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
assets/3d/models/: credits.txt
assets/3d/models/Cactus/: cactus.fbx
assets/res/values/: strings.xml
assets/shaders/: basic.frag.glsl  basic.vert.glsl  deferred_lighting.comp.glsl  disc.frag.glsl  disc.vert.glsl  hint.vert.glsl  imgui.vert.glsl  menu.vert.glsl  outline.frag.glsl  outline.vert.glsl  shine.frag.glsl
engine/: Cargo.toml  build.rs
engine/assets/shaders/: basic.frag.glsl  basic.vert.glsl  deferred_lighting.comp.glsl  hint.frag.glsl  imgui.frag.glsl  shine.frag.glsl  shine.vert.glsl
engine/src/: input.rs  lib.rs  platform.rs
engine/src/app/: application.rs  game_engine.rs  mod.rs
engine/src/architecture/models/: animation.rs  animation_player.rs  material.rs  mesh.rs  mod.rs  model.rs  model_cache.rs  model_loader.rs  simple_model.rs  skeleton.rs
engine/src/architecture/models/model_loader/: data.rs  incremental.rs  mod.rs
engine/src/architecture/scene/: mod.rs  scene_context.rs
engine/src/architecture/scene/entity/: mod.rs  scene_object.rs  simple_entity.rs
engine/src/architecture/scene/node/: mod.rs  node.rs  scenegraph.rs  transform.rs  ui_node.rs
engine/src/opengl/constants/: data_type.rs  format_type.rs  mod.rs  vbo_access.rs  vbo_target.rs  vbo_usage.rs
engine/src/opengl/fbos/: fbo.rs  fbo_target.rs  ifbo.rs  mod.rs  scene_fbo.rs  simple_texture.rs
engine/src/opengl/fbos/attachment/: attachment.rs  attachment_type.rs  texture_attachment.rs
engine/src/opengl/objects/: attribute.rs  clip_plane.rs  data_buffer.rs  ivbo.rs  mod.rs  pbo.rs  vao.rs  vbo.rs
engine/src/opengl/shaders/: compute_program.rs  lighting_pass.rs  mod.rs  render_state.rs  shader.rs  shader_program.rs  simple_program.rs  uniform.rs
engine/src/opengl/textures/: mod.rs  texture.rs  texture_configs.rs  texture_target.rs
engine/src/opengl/textures/parameters/: mag_filter_parameter.rs  min_filter_parameter.rs  mod.rs  texture_parameter.rs  wrap_parameter.rs
engine/src/rendering/: mod.rs  pipeline.rs  render_state.rs
engine/src/rendering/abstracted/: irenderer.rs  processable.rs  renderable.rs
engine/src/rendering/abstracted/camera/: camera_projection.rs
engine/src/rendering/instances/: entity_render.rs  imgui_render.rs  mod.rs
engine/src/rendering/instances/camera/: camera.rs  camera_controller.rs  camera_controllers.rs  mod.rs  orbit_controller.rs  orthographic_projection.rs  perspective_projection.rs
engine/tests/: animation_tests.rs  camera_controllers_tests.rs  camera_projection.rs  camera_tests.rs  centroid_transform_tests.rs  entity_render_tests.rs  glb_inspect.rs  input_tests.rs  material_extended_tests.rs  material_tests.rs  model_defaults_tests.rs  node_hierarchy_tests.rs  node_tests.rs  orbit_controller_tests.rs  render_state_extended_tests.rs  render_state_tests.rs  scene_context_tests.rs  scenegraph_tests.rs  scramble_tests.rs  transform_tests.rs  transform_world.rs
examples/: android.rs  desktop.rs
game/: Cargo.toml  build.rs
game/assets/shaders/: menu.frag.glsl  shine.frag.glsl
game/examples/: android.rs  desktop.rs
game/src/: asset_loader.rs  formosaic.rs  game_engine.rs  input.rs  lib.rs
game/src/level/: poly_pizza.rs  storage.rs
game/src/puzzle/: entropy.rs  hints.rs  mod.rs  puzzle_params.rs  scramble_math.rs  scrambler.rs
game/src/rendering/: hint_render.rs  menu_render.rs  mod.rs  shine_render.rs
game/src/ui/: credits.rs  hint_warmth.rs  hud.rs  loading.rs  menu.rs  mod.rs  state_machine.rs  touch_buttons.rs  util.rs
game/tests/: camera_lerp_tests.rs  entropy_tests.rs  hint_system_tests.rs  scramble_tests.rs  scrambler_tests.rs  touch_scroll_tests.rs
src/: formosaic.rs  game.rs  game_engine.rs  graphics.rs  imgui_renderer.rs  input.rs  lib.rs  mesh.rs  renderer.rs  shared.rs  simple_model.rs
src/engine/: mod.rs
src/engine/architecture/: mod.rs
src/engine/architecture/models/: material.rs  mesh.rs  mod.rs  model.rs  model_cache.rs  model_loader.rs  simple_model.rs
src/engine/architecture/scene/: scene_context.rs
src/engine/architecture/scene/entity/: entity.rs  mod.rs  scene_object.rs  simple_entity.rs
src/engine/architecture/scene/node/: node.rs  scenegraph.rs  transform.rs
src/engine/rendering/: mod.rs  pipeline.rs  render_output_data.rs
src/engine/rendering/abstracted/: irenderer.rs  mod.rs  processable.rs  renderable.rs
src/engine/rendering/abstracted/camera/: mod.rs
src/engine/rendering/instances/: disc_render.rs  entity_render.rs  hint_render.rs  hud_render.rs  imgui_render.rs  menu_render.rs  mod.rs  outline_render.rs  shine_render.rs  simple_triangle_renderer.rs
src/engine/rendering/instances/camera/: camera.rs  camera_controller.rs  camera_controllers.rs  mod.rs  orbit_controller.rs  orthographic_projection.rs  perspective_projection.rs
src/level/: mod.rs  poly_pizza.rs
src/opengl/: gl_utils.rs  mod.rs
src/opengl/constants/: gl_buffer.rs  mod.rs  render_mode.rs  vbo_access.rs
src/opengl/fbos/: fbo.rs  fbo_target.rs  ifbo.rs  mod.rs  render_buffer.rs  scene_fbo.rs  simple_texture.rs
src/opengl/fbos/attachment/: abstract_attachment.rs  mod.rs  texture_attachment.rs
src/opengl/objects/: data_buffer.rs  index_buffer.rs  mod.rs  vao.rs  vbo.rs
src/opengl/shaders/: compute_program.rs  lighting_pass.rs  mod.rs  render_state.rs  shader.rs  shader_program.rs  simple_program.rs  uniform.rs
src/opengl/textures/: texture.rs  texture_configs.rs
src/opengl/textures/parameters/: mag_filter_parameter.rs  min_filter_parameter.rs  wrap_parameter.rs
src/puzzle/: entropy.rs  scrambler.rs
src/shaders/: shader.rs  shader_program.rs  uniform.rs
xtask/: Cargo.toml
xtask/src/: main.rs
