[package]
name        = "formosaic-engine"
version     = "0.1.0"
edition     = "2021"
description = "Generic OpenGL ES rendering engine for Formosaic"

[dependencies]
gl      = "0.14"
cgmath  = "0.18"
log     = "0.4"
imgui   = "0.12"
rand    = "0.9.2"
russimp-ng = { git = "https://github.com/Kek5chen/russimp-ng.git", features = ["static-link"] }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases  = "0.2.1"
