[package]
name        = "formosaic-engine"
version     = "0.1.0"
edition     = "2021"
description = "Generic OpenGL ES rendering engine for Formosaic"

[features]
# "windowed" adds winit/glutin and the GameEngine host.
# The core engine compiles without it.
windowed = [
    "dep:winit", "dep:glutin", "dep:glutin-winit",
    "dep:imgui-winit-support",
]

[dependencies]
gl       = "0.14"
cgmath   = "0.18"
log      = "0.4"
imgui    = "0.12"
rand     = "0.9.2"
image      = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
russimp-ng = { git = "https://github.com/Kek5chen/russimp-ng.git", features = ["static-link"] }

# Windowed platform host (optional)
winit               = { version = "0.30.13", default-features = false, features = ["rwh_06"], optional = true }
glutin              = { version = "0.32.3",  default-features = false,                        optional = true }
glutin-winit        = { version = "0.5.0",   default-features = false,                        optional = true }
imgui-winit-support = { version = "0.13",                                                     optional = true }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases  = "0.2.1"
