[package]
name        = "formosaic"
version     = "0.1.0"
edition     = "2021"
description = "Formosaic — a polysphere-style puzzle game"

[features]
default  = ["egl", "glx", "x11", "wayland", "wgl"]
egl      = ["glutin-winit/egl", "png"]
glx      = ["glutin-winit/glx"]
wgl      = ["glutin-winit/wgl"]
x11      = ["glutin-winit/x11"]
wayland  = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
formosaic-engine   = { path = "../engine" }
gl                 = "0.14"
cgmath             = "0.18"
log                = "0.4"
env_logger         = "0.10"
rand               = "0.9.2"
ureq               = { version = "2.10", features = ["tls"] }
imgui              = "0.12"
imgui-winit-support = "0.13"
glutin             = { version = "0.32.3", default-features = false }
glutin-winit       = { version = "0.5.0",  default-features = false }
png                = { version = "0.17.6", optional = true }
raw-window-handle  = "0.6"
winit              = { version = "0.30.13", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_os = "android")'.dependencies]
winit          = { version = "0.30.13", default-features = false, features = ["android-native-activity", "rwh_06"] }
android_logger = "0.13"
ndk-context    = "0.1.1"
jni            = "0.21.1"

[[example]]
name       = "desktop"

[[example]]
name      = "android"
crate-type = ["cdylib"]

[package.metadata.android]
package     = "com.formosaic.game"
apk_name    = "Formosaic"
label       = "Formosaic"
icon        = "@mipmap/ic_launcher"
orientation = "sensorLandscape"
resources   = "assets/res"
assets      = "assets/3d"

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.sdk]
target_sdk_version = 33
min_sdk_version    = 21

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[package.metadata.android.application.activity]
label = "Formosaic"

[package.metadata.android.signing.release]
path               = "release.keystore"
keystore_password  = "danjklk98234o23penmp09kasdpldas%&()Q"
key_alias          = "formosaic"
key_password       = "danjklk98234o23penmp09kasdpldas%&()Q"


[build-dependencies]
cfg_aliases = "0.2.1"
