[package]
name        = "formosaic"
version     = "0.1.0"
edition     = "2021"
description = "Formosaic — a polysphere-style puzzle game"

[features]
default  = ["egl", "glx", "x11", "wayland", "wgl"]
egl      = ["formosaic-engine/windowed", "glutin-winit/egl", "png"]
glx      = ["formosaic-engine/windowed", "glutin-winit/glx"]
wgl      = ["formosaic-engine/windowed", "glutin-winit/wgl"]
x11      = ["formosaic-engine/windowed", "glutin-winit/x11"]
wayland  = ["formosaic-engine/windowed", "glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
formosaic-engine    = { path = "../engine", features = ["windowed"] }
gl                  = "0.14"
cgmath              = "0.18"
log                 = "0.4"
env_logger          = "0.10"
rand                = "0.9.2"
ureq                = { version = "2.10", features = ["tls"] }
imgui               = "0.12"
# winit/glutin/imgui-winit-support remain here for the feature flags and
# Android-specific build metadata; the engine re-exports GameEngine.
winit               = { version = "0.30.13", default-features = false, features = ["rwh_06"] }
glutin-winit        = { version = "0.5.0",   default-features = false }
png                 = { version = "0.17.6",  optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit          = { version = "0.30.13", default-features = false, features = ["android-native-activity", "rwh_06"] }
android_logger = "0.13"
ndk-context    = "0.1.1"
jni            = "0.21.1"

[[example]]
name = "desktop"

[[example]]
name      = "android"
crate-type = ["cdylib"]

[package.metadata.android]
package     = "com.formosaic.game"
apk_name    = "Formosaic"
resources   = "assets/res"
assets      = "assets/3d"

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
icon  = "@mipmap/ic_launcher"
label = "Formosaic"

[package.metadata.android.sdk]
target_sdk_version = 33
min_sdk_version    = 21

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[package.metadata.android.application.activity]
label = "Formosaic"

[package.metadata.android.signing.release]
path               = "release.keystore"
keystore_password  = "danjklk98234o23penmp09kasdpldas%&()Q"
key_alias          = "formosaic"
key_password       = "danjklk98234o23penmp09kasdpldas%&()Q"

[build-dependencies]
cfg_aliases = "0.2.1"
